# polynomial-optics-modern

./: .gitignore  CMakeLists.txt  Example_BasicArithmetic.cpp  Example_EclipsedBokeh.cpp  Example_PostprocessImage.cpp  LICENSE.md  Makefile  README.md  README.upstream.md  documentation.md  mkdocs.yml
.github/workflows/: ci.yml  pages.yml
OpticalElements/: PointToPupil5.hh
TruncPoly/: TruncPolySystem.hh
docs/: documentation.md  hosting.md  index.md  mkdocs.yml  upstream.md
docs/examples/: ex0-basicarithmetic.md  ex1-postprocess.md  ex2-eclipsed-bokeh.md
docs/experiments/: sanity.md
docs/guide/: build.md  math-model.md  overview.md  structure.md
docs/reference/: citation.md  lens-format.md  troubleshooting.md
docs/tools/: exr-sanity.md
examples/: Example_PostprocessImage.cpp
include/: spectrum.h
tools/: cinematic_eclipsed_sequence.py  defocus_sweep.py  exr_sanity.cpp  gen_pfm.py  reproduce.py  run_sanity_psf.sh
